--- a/index.html
+++ b/index.html
@@ -11,5 +11,23 @@
   <script type="text/javascript" src="script.js" defer></script> 
 </head>
 <body>
+  <!-- ESERCIZIO EMAIL ---------------------------------------------------------------------- -->
+
+  <div class="ex-email-container">
+    <!-- INPUT EMAIL ESISTENTE -->
+    <form>
+      Inserisci la tua email: <input type="email" id="emailInput">
+      <button type="button" onclick="checkEmail()">Verifica</button>
+    </form>
+
+    <!-- JS DISPLAY -->
+    <div id="output"></div>
+
+    <!-- INPUT NUOVA EMAIL -->
+    <form id="addEmailForm" style="display:none;">
+      Inserisci l'email da aggiungere alla lista: <input type="email" id="newEmailInput">
+      <button type="button" onclick="addEmail()">Aggiungi</button>
+    </form>
+  </div>
 </body>
 </html>
